--- a/app/src/main/res/layout/part_not_finish_reason.xml
+++ b/app/src/main/res/layout/part_not_finish_reason.xml
@@ -19,16 +19,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/stop_reason"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
     <Button
         android:id="@+id/button"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:onClick="registerNotFinishReason"
         android:text="登録"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status_reason"
-        android:onClick="registerNotFinishReason"/>
+        app:layout_constraintTop_toBottomOf="@+id/stop_reason" />
 
     <Button
         android:id="@+id/button3"
@@ -41,17 +54,4 @@
         app:layout_constraintTop_toTopOf="@+id/button"
         android:onClick="hideNotFinishReasonView"/>
 
-    <EditText
-        android:id="@+id/stop_reason"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        />
 </android.support.constraint.ConstraintLayout>
