--- a/app/src/main/res/layout/timer_main.xml
+++ b/app/src/main/res/layout/timer_main.xml
@@ -186,6 +186,12 @@
                 android:layout_height="match_parent" />
         </FrameLayout>
 
+        <FrameLayout
+            android:id="@+id/diff_reason_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+        </FrameLayout>
     </android.support.constraint.ConstraintLayout>
 
 </layout>
