--- a/app/src/main/res/layout/part_diff_reason.xml
+++ b/app/src/main/res/layout/part_diff_reason.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    >
+    android:layout_margin="10dp"
+    android:background="@android:color/background_light">
 
     <TextView
         android:id="@+id/textView6"
@@ -52,9 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:onClick="hideDiffReasonFragment"
         android:text="キャンセル"
         app:layout_constraintStart_toEndOf="@+id/register"
-        app:layout_constraintTop_toTopOf="@+id/register"
-        android:onClick="hideNotFinishReasonView"/>
+        app:layout_constraintTop_toTopOf="@+id/register" />
 
 </android.support.constraint.ConstraintLayout>
