--- a/app/src/main/res/layout/backlog_main.xml
+++ b/app/src/main/res/layout/backlog_main.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/recycler"
                 backlog_items="@{backlogVM.items}"
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
+                android:layout_height="390dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
@@ -79,6 +79,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="今日のTODOへ移す"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
             app:layout_constraintStart_toEndOf="@+id/imageView" />
 
