--- a/app/src/main/res/layout/part_diff_reason.xml
+++ b/app/src/main/res/layout/part_diff_reason.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:theme="@style/EditTextColorControl"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
         android:layout_marginTop="8dp"
         android:onClick="registerDiffReason"
         android:text="登録"
+        android:textColor="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/diff_reason" />
 
@@ -53,6 +55,7 @@
         android:layout_marginStart="8dp"
         android:onClick="hideDiffReasonFragment"
         android:text="キャンセル"
+        android:textColor="@color/colorAccent"
         app:layout_constraintStart_toEndOf="@+id/register"
         app:layout_constraintTop_toTopOf="@+id/register" />
 
