--- a/app/src/main/res/layout/part_finish_status.xml
+++ b/app/src/main/res/layout/part_finish_status.xml
@@ -70,6 +70,7 @@
         android:ems="10"
         android:hint="理由"
         android:inputType="textMultiLine"
+        android:theme="@style/EditTextColorControl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
@@ -84,6 +85,7 @@
         android:layout_marginEnd="8dp"
         android:onClick="registerFinishStatus"
         android:text="登録してポモドーロを終了する"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/status_reason" />
