--- a/app/src/main/res/layout/registeredit_task.xml
+++ b/app/src/main/res/layout/registeredit_task.xml
@@ -37,18 +37,18 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" >
-        </EditText>
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            android:theme="@style/EditTextColorControl"/>
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="ポモドーロ数"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:text="予定ポモドーロ数"
             app:layout_constraintStart_toStartOf="@+id/task_name"
-            app:layout_constraintTop_toBottomOf="@+id/task_name" />
+            app:layout_constraintTop_toBottomOf="@+id/task_name"
+            android:theme="@style/EditTextColorControl"/>
 
         <EditText
             android:id="@+id/pomo_cnt"
@@ -59,6 +59,7 @@
             android:ems="10"
             android:inputType="number"
             android:text="@={taskVM.forecastPomo}"
+            android:theme="@style/EditTextColorControl"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/task_name" />
