--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -37,7 +37,8 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="-10dp"
                 android:onClick="moveBacklog"
-                android:text="Backlog" />
+                android:text="Backlog"
+                android:textColor="@color/colorAccent" />
 
             <TextView
                 android:id="@+id/title"
@@ -136,6 +137,7 @@
                 android:layout_toEndOf="@+id/imageView"
                 android:onClick="moveTaskToBacklog"
                 android:text="Backlogへ戻す"
+                android:textColor="@color/colorAccent"
                 app:layout_constraintStart_toEndOf="@+id/imageView" />
 
         </RelativeLayout>
