--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -23,7 +23,9 @@
                 android:id="@+id/add_task_fragment"
                 android:name="com.mochoi.pomer.view.AddNewTaskView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
 
             <Button
                 android:id="@+id/move_backlog"
@@ -102,7 +104,7 @@
                 android:id="@+id/recycler"
                 todo_items="@{todolistVM.items}"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
                 android:layout_above="@+id/button2"
                 android:layout_below="@+id/todays_pomodoro"
                 android:layout_alignParentStart="true"
@@ -110,7 +112,6 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
                 app:layout_constraintEnd_toEndOf="@+id/add_task_fragment">
 
             </android.support.v7.widget.RecyclerView>
@@ -119,10 +120,9 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/add_task_fragment"
+                android:layout_above="@+id/move_past_task"
                 android:layout_marginLeft="8dp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintTop_toTopOf="@+id/button2"
+                android:layout_marginBottom="8dp"
                 app:srcCompat="@android:drawable/ic_media_ff" />
 
             <Button
@@ -130,15 +130,22 @@
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageView"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="-16dp"
+                android:layout_above="@+id/move_past_task"
                 android:layout_toEndOf="@+id/imageView"
                 android:onClick="moveTaskToBacklog"
                 android:text="Backlogへ戻す"
-                android:textColor="@color/colorAccent"
-                app:layout_constraintStart_toEndOf="@+id/imageView" />
+                android:textColor="@color/colorAccent" />
+
+            <Button
+                android:id="@+id/move_past_task"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/add_task_fragment"
+                android:layout_marginStart="8dp"
+                android:text="過去のタスク"
+                android:onClick="movePastTask"
+                android:textColor="@color/colorAccent" />
 
         </RelativeLayout>
     </android.support.constraint.ConstraintLayout>
