--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -30,12 +30,13 @@
             <Button
                 android:id="@+id/move_backlog"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/add_task_fragment"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="-10dp"
+                android:layout_marginEnd="0dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="-10dp"
                 android:onClick="moveBacklog"
@@ -43,26 +44,13 @@
                 android:textColor="@color/colorAccent" />
 
             <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/move_backlog"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:background="@color/colorAction"
-                android:gravity="center_horizontal"
-                android:padding="10dp"
-                android:text="今日のTODO"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/white" />
-
-            <TextView
                 android:id="@+id/todays_pomo_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/recycler"
-                android:layout_below="@+id/title"
+                android:layout_below="@+id/move_backlog"
                 android:layout_alignStart="@+id/move_backlog"
+                android:layout_marginStart="8dp"
                 android:gravity="center"
                 android:text="予定ポモドーロ　あと："
                 android:visibility="@{StringUtils.isBlank(todolistVM.todaysPomodoroAlert) ? View.VISIBLE : View.INVISIBLE}" />
@@ -71,7 +59,7 @@
                 android:id="@+id/todays_pomodoro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/title"
+                android:layout_below="@+id/move_backlog"
                 android:layout_alignParentEnd="true"
                 android:layout_toEndOf="@+id/todays_pomo_text"
                 android:text="@{`` + todolistVM.todaysPomodoro}"
@@ -92,7 +80,7 @@
                 android:id="@+id/todays_pomo_unknown"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/title"
+                android:layout_below="@+id/move_backlog"
                 android:layout_alignStart="@+id/todays_pomo_text"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="8dp"
