--- a/app/src/main/res/layout/part_diff_reason.xml
+++ b/app/src/main/res/layout/part_diff_reason.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:background="@android:color/background_light">
+    android:background="@android:color/background_light"
+    android:elevation="24dp"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/textView6"
@@ -28,8 +30,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:theme="@style/EditTextColorControl"
         android:inputType="textMultiLine"
+        android:theme="@style/EditTextColorControl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
