--- a/app/src/main/res/layout/part_finish_status.xml
+++ b/app/src/main/res/layout/part_finish_status.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:background="@android:color/background_light">
+    android:background="@android:color/background_light"
+    android:elevation="24dp">
 
     <TextView
         android:id="@+id/textView4"
