--- a/app/src/main/res/layout/part_not_finish_reason.xml
+++ b/app/src/main/res/layout/part_not_finish_reason.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:background="@android:color/background_light">
+    android:layout_margin="20dp"
+    android:background="@android:color/background_light"
+    android:elevation="24dp"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/textView6"
@@ -27,10 +29,10 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textMultiLine"
+        android:theme="@style/EditTextColorControl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        android:theme="@style/EditTextColorControl"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/button"
