--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -148,6 +148,7 @@
                     android:layout_height="100dp"
                     android:layout_marginBottom="8dp"
                     android:text="Report"
+                    android:onClick="moveReport"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
             </LinearLayout>
 
