--- a/app/src/main/res/layout/report_main.xml
+++ b/app/src/main/res/layout/report_main.xml
@@ -9,6 +9,10 @@
             name="reportVM"
             type="com.mochoi.pomer.viewmodel.ReportVM"/>
     </data>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,15 +36,15 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:clickable="false"
+            android:cursorVisible="false"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:inputType="date"
             android:text="@{reportVM.fromDate}"
             app:layout_constraintStart_toEndOf="@+id/back_date"
-            app:layout_constraintTop_toTopOf="@+id/back_date"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"/>
+            app:layout_constraintTop_toTopOf="@+id/back_date" />
 
         <TextView
             android:id="@+id/textView9"
@@ -57,15 +61,15 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:clickable="false"
+            android:cursorVisible="false"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:inputType="date"
             android:text="@{reportVM.toDate}"
             app:layout_constraintStart_toEndOf="@+id/textView9"
-            app:layout_constraintTop_toTopOf="@+id/from_date"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"/>
+            app:layout_constraintTop_toTopOf="@+id/from_date" />
 
         <ImageButton
             android:id="@+id/next_date"
@@ -79,13 +83,13 @@
             app:layout_constraintTop_toTopOf="@+id/to_date"
             app:srcCompat="@drawable/next_sign" />
 
-            <com.github.mikephil.charting.charts.BarChart
-                android:id="@+id/bar_chart"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/from_date"/>
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/bar_chart"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/from_date" />
 
         <TextView
             android:id="@+id/avg_pomo_text"
@@ -161,5 +165,45 @@
             app:layout_constraintStart_toEndOf="@+id/diff_denominator"
             app:layout_constraintTop_toTopOf="@+id/diff_denominator" />
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.constraint.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/detail_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Task Detail"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView20" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/detail_recycler_view"
+            detail_items="@{reportVM.details}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="#ffffe0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_text" />
+
+        <ImageButton
+            android:id="@+id/detail_btn"
+            android:layout_width="25dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="8dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="@+id/detail_text"
+            app:layout_constraintStart_toEndOf="@+id/detail_text" />
+
     </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 </layout>
