--- a/app/src/main/res/layout/report_main.xml
+++ b/app/src/main/res/layout/report_main.xml
@@ -166,6 +166,7 @@
             app:layout_constraintTop_toTopOf="@+id/diff_denominator" />
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -182,19 +183,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/detail_recycler_view"
-            detail_items="@{reportVM.details}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:background="#ffffe0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_text" />
-
         <ImageButton
             android:id="@+id/detail_btn"
             android:layout_width="25dp"
@@ -204,6 +192,46 @@
             app:layout_constraintBottom_toBottomOf="@+id/detail_text"
             app:layout_constraintStart_toEndOf="@+id/detail_text" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/detail_recycler_view"
+            detail_items="@{reportVM.details}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="#ffffe0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_text">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/reason_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="理由一覧"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_recycler_view" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/reason_recycler_view"
+            reason_items="@{reportVM.reasons}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reason_text" />
+
     </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
 </layout>
