--- a/app/src/main/res/layout/report_detail_item.xml
+++ b/app/src/main/res/layout/report_detail_item.xml
@@ -9,18 +9,14 @@
             type="com.mochoi.pomer.viewmodel.ReportDetailItemVM"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <TextView
+        android:id="@+id/task"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/task"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@{itemVM.task}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="0dp"
+        android:text="@{itemVM.task}"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </layout>
